<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ki.optisoins</groupId>
    <artifactId>optisoins</artifactId>
    <version>1.3.3-SNAPSHOT</version>

    <properties>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jasperreports.version>6.2.0</jasperreports.version>
        <itext.version>2.1.7</itext.version>
        <poi.version>3.13</poi.version>
        <junit.version>4.12</junit.version>
        <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
        <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
        <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
        <launch4j-maven-plugin.version>1.7.8</launch4j-maven-plugin.version>
        <log4j-api.version>2.5</log4j-api.version>
        <log4j-core.version>2.5</log4j-core.version>
        <mirror.version>1.6.1</mirror.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.vidageek</groupId>
            <artifactId>mirror</artifactId>
            <version>${mirror.version}</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports</artifactId>
            <version>${jasperreports.version}</version>
        </dependency>
        <dependency>
            <groupId>com.lowagie</groupId>
            <artifactId>itext</artifactId>
            <version>${itext.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>${poi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j-core.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>
		<dependency>
			<groupId>com.akathist.maven.plugins.launch4j</groupId>
			<artifactId>launch4j-maven-plugin</artifactId>
			<version>${launch4j-maven-plugin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-assembly-plugin</artifactId>
			<version>${maven-assembly-plugin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>${maven-compiler-plugin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-jar-plugin</artifactId>
			<version>${maven-jar-plugin.version}</version>
		</dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
				<version>${maven-assembly-plugin.version}</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>ki.optisoins.OptiSoins</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-my-jar-with-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>attached</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>ki.optisoins.OptiSoins</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
			<plugin>
          		<groupId>com.akathist.maven.plugins.launch4j</groupId>
          		<artifactId>launch4j-maven-plugin</artifactId>
			<version>${launch4j-maven-plugin.version}</version>
          <executions>
            <execution>
              <id>l4j-clui</id>
              <phase>package</phase>
              <goals>
              	<goal>launch4j</goal>
              </goals>
              <configuration>
              	<icon>src/main/resources/icons/exeIcon.ico</icon>
                <headerType>console</headerType>
                <outfile>target/optisoins-${project.version}.exe</outfile>
					<jar>target/optisoins-${project.version}-jar-with-dependencies.jar</jar>
                <errTitle>Erreur</errTitle>
                <classPath>
                  <mainClass>ki.optisoins.OptiSoins</mainClass>
                  <addDependencies>true</addDependencies>
                  <preCp>anything</preCp>
                </classPath>
                <jre>
                  <minVersion>1.8.0</minVersion>
                  <opts>
                    <opt>-Djava.endorsed.dirs=./endorsed</opt>
                  </opts>
                </jre>
                <versionInfo>
                  <fileVersion>0.0.0.1</fileVersion>
                  <txtFileVersion>version alpha</txtFileVersion>
                  <fileDescription>optisoins</fileDescription>
                  <copyright>Kilian Stein</copyright>
                  <productVersion>0.0.0.1</productVersion>
                  <txtProductVersion>optisoins</txtProductVersion>
                  <productName>optisoins</productName>
                  <internalName>optisoins</internalName>
                  <originalFilename>optisoins.exe</originalFilename>
                </versionInfo>
              </configuration>
            </execution>
          </executions>
        </plugin>
        </plugins>
    </build>


</project>